config-root/namespaces/jx-staging/sprint-boot-1/sprint-boot-1-sprint-boot-1-deploy.yaml
# Source: sprint-boot-1/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprint-boot-1-sprint-boot-1
  labels:
    draft: draft-app
    chart: "sprint-boot-1-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: sprint-boot-1-sprint-boot-1
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: sprint-boot-1-sprint-boot-1
    spec:
      serviceAccountName: sprint-boot-1-sprint-boot-1
      containers:
        - name: sprint-boot-1
          image: "10.105.34.229/qianweichun/sprint-boot-1:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
