config-root/namespaces/jx-staging/sprint-boot-1/sprint-boot-1-svc.yaml
# Source: sprint-boot-1/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprint-boot-1
  labels:
    chart: "sprint-boot-1-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sprint-boot-1-sprint-boot-1
