config-root/namespaces/jx-staging/sprint-boot-1/sprint-boot-1-ingress.yaml
# Source: sprint-boot-1/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sprint-boot-1
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: sprint-boot-1
              servicePort: 80
      host: sprint-boot-1-jx-staging.192.168.82.5.nip.io
